# spam-filter

./: .gitignore  CMakeLists.txt  brier_scores.csv  cv_results.csv  evalution_results.csv  final_configs.csv  learning_curves.csv  run.cmd
reports/: README.md  metric_selection.md  spam_filter_research.md
src/: CMakeLists.txt  base_classifier.hpp  cv_results.csv  email.hpp  evalution_results.csv  final_configs.csv  learning_curves.csv  main copy.cpp  main.cpp  metric.hpp  murmurhash.hpp  naive_bayes_count_min.hpp  naive_bayes_feature_hashing.hpp  parameter_sweep.csv  plot.py  script.bat  script.sh  timing_results.csv
src/reports/: auc_scores_selected.csv  config_radar.html  cv_recall_at_prec95.html  cv_recall_at_prec95_cm_3d.html  learning_curves_selected.html  space_usage.html  timing_4d.html  timing_by_dimension.html
