cmake_minimum_required(VERSION 3.5)

project(bdap-assignment1)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_BUILD_TYPE "RelWithDebInfo")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(BDAP_ASSIGNMENT1_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(BDAP_ASSIGNMENT1_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(BDAP_ASSIGNMENT1_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

include_directories(${BDAP_ASSIGNMENT1_INSTALL_INCLUDE_DIR})

add_subdirectory(src)
